# ailt

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  gatsby-config.js  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ailt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contact/: index.html
content/pages/: index.mdx
content/pages/about/: index.mdx
content/pages/courses/: index.mdx
content/pages/events/: index.mdx
content/pages/projects/: index.mdx
content/pages/team/: index.mdx
courses/: index.html
docs/: contact.md  courses.md  events.md  index.md  team.md  tools.md  videos.md
docs/css/: custom.css
docs/img/logos/: haury.eps  logo-small.ai
events/: index.html
overrides/: main.html
search/: search_index.json
src/@lekoarts/gatsby-theme-minimal-blog/components/: footer.jsx
src/pages/: 404.jsx
team/: index.html
tools/: index.html
videos/: index.html
